# c2dmp-hsm

./: .gitignore  CMakeLists.txt  README.md  main.cpp
c2dmp-hsm/: c2dmp-hsm_optimized.cpp  c2dmp-hsm_simplified.cpp
cmake/script/: check_files.sh
include/c2dmp-hsm/: c2dmp-hsm.hpp
include/c2dmp-hsm/algorithm/: optimized.hpp  simplified.hpp
